crates/search/tests/settings/snapshots/vectors.rs/bad_parameters/openAi-revision-sending_result.snap
---
source: crates/indexsearch/tests/settings/vectors.rs
---
{
  "message": "`.embedders.test`: Field `revision` unavailable for source `openAi`.\n  - note: `revision` is available for sources: `huggingFace`\n  - note: available fields for source `openAi`: `source`, `model`, `apiKey`, `dimensions`, `documentTemplate`, `documentTemplateMaxBytes`, `url`, `distribution`, `binaryQuantized`",
  "code": "invalid_settings_embedders",
  "type": "invalid_request",
  "link": "https://docs.hanzo.ai/docs/errors#invalid_settings_embedders"
}
