crates/search/tests/settings/snapshots/vectors.rs/bad_parameters/rest-model-sending_result.snap
---
source: crates/meilisearch/tests/settings/vectors.rs
---
{
  "message": "`.embedders.test`: Field `model` unavailable for source `rest`.\n  - note: `model` is available for sources: `openAi`, `huggingFace`, `ollama`\n  - note: available fields for source `rest`: `source`, `apiKey`, `dimensions`, `documentTemplate`, `documentTemplateMaxBytes`, `url`, `request`, `response`, `headers`, `distribution`, `binaryQuantized`",
  "code": "invalid_settings_embedders",
  "type": "invalid_request",
  "link": "https://docs.hanzo.ai/errors#invalid_settings_embedders"
}
